[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/lamp.png" type="Texture2D" id=1]
[ext_resource path="res://src/Spawner.gd" type="Script" id=2]

[sub_resource type="StandardMaterial3D" id=4]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2
albedo_texture = ExtResource( 1 )

[node name="Spawner" type="Sprite3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33.9304, 1.586, 0.0361938 )
material_override = SubResource( 4 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="OmniLight3D" type="OmniLight3D" parent="."]

[node name="BatchTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BatchTimer" to="." method="_on_BatchTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
